[OPLU-323] Endpoint for checking if given tokens have editorial remarks or comments (#103)
* [OPLU-323] Add EditedTokensEvaluator service

* [OPLU-323] Add policy for :check_if_edited endpoint

* [OPLU-323] Add endpoint for checking if any of the tokens have been edited

* [OPLU-323] Rename from check_if_edited to edited

* [OPLU-323] Update Swagger docs for /edited endpoint
