# app/controllers/v1/tokens_controller.rb
@@ -4,7 +4,7 @@ module V1
   class TokensController < CommonController
     include WithProject
 
-    after_action :update_tracking_info, except: %i[index show]
+    after_action :update_tracking_info, except: %i[index show edited]
 
     def index
       authorize Token, :index?
@@ -62,6 +62,20 @@ module V1
       else
         respond_with_record_errors(result.params, :unprocessable_entity)
       end
+    end
+
+    def edited
+      authorize Token, :edited?
+
+      result =  EditedTokensEvaluator.perform(
+        project:            @project,
+        selected_token_ids: params[:selected_token_ids]
+      )
+
+      render(
+        json:   result.as_json,
+        status: :ok
+      )
     end
 
     private
